2013-08-29  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-china.el (calendar-chinese-year-cache):
	Recenter on 2015.

	* nxml/nxml-util.el (nxml-debug-clear-inside):
	Use cl-loop rather than loop.

	* net/eww.el (eww-mode-map): Lower-case menu bar entries look bad.

	* progmodes/sh-script.el (sh-builtins) <bash>: Add some bash4-isms.

2013-08-28  Glenn Morris  <rgm@gnu.org>

	* progmodes/antlr-mode.el: No need to require cc-mode twice.

	* progmodes/cc-bytecomp.el (cc-require): Handle uncompiled case.

	* progmodes/cc-mode.el (c-define-abbrev-table): Handle NAME unbound.

2013-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (repeat-complex-command--called-interactively-skip):
	New function.
	(repeat-complex-command): Use it (bug#14136).

	* progmodes/cc-mode.el: Minor cleanup of var declarations.
	(c-define-abbrev-table): Add `doc' argument.
	(c-mode-abbrev-table, c++-mode-abbrev-table)
	(objc-mode-abbrev-table, java-mode-abbrev-table)
	(idl-mode-abbrev-table, pike-mode-abbrev-table)
	(awk-mode-abbrev-table): Use it.
	(c-mode-syntax-table, c-mode-map, c++-mode-syntax-table)
	(c++-mode-map, objc-mode-syntax-table, objc-mode-map)
	(java-mode-syntax-table, java-mode-map, idl-mode-syntax-table)
	(idl-mode-map, pike-mode-syntax-table, pike-mode-map, awk-mode-map):
	Move initialization into the declaration; and remove any
	autoload cookie.

	* epg.el (epg--process-filter): Use with-current-buffer, save-excursion
	and dynamic let binding.

	* vc/smerge-mode.el: Remove redundant :group args.

	* emacs-lisp/package.el (package-activate-1): Don't add unnecessarily
	to load-path.

2013-08-28  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-reread-key-sequence-naturally): Use non-nil
	arg DONT-DOWNCASE-LAST of `read-key-sequence'.
	(isearch-other-meta-char): Handle an undefined shifted printing
	character by downshifting it.  (Bug#15200)

2013-08-28  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-search): Change regexp error message for